header and main content

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,9 @@
 // custom variables
 $primary: #5265E1;
 $secondary: #FA5959;
+$font-size-base: .7;
+$btn-font-size: .2;
+$nav-link-font-size: .7;   
 
 // import bootstrap
 @import '../node_modules/bootstrap/scss/bootstrap';
