--- a/nivell1/css/styles.css
+++ b/nivell1/css/styles.css
@@ -1,3 +1,7 @@
+.nav-tabs .nav-link.active {
+  border-bottom: 4px solid red;
+}
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
