--- a/nivell1/css/styles.css
+++ b/nivell1/css/styles.css
@@ -1,5 +1,26 @@
+.nav-tabs {
+  border: none;
+}
+
+.nav-tabs .nav-link {
+  color: #343a40;
+}
+
+.nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
+  border: none;
+}
+
 .nav-tabs .nav-link.active {
   border-bottom: 4px solid red;
+}
+
+.shadow {
+  -webkit-box-shadow: 0px 3px 9px -2px rgba(59, 123, 255, 0.48) !important;
+          box-shadow: 0px 3px 9px -2px rgba(59, 123, 255, 0.48) !important;
+}
+
+.dotted-line {
+  border-bottom: 5px dotted #eee;
 }
 
 /*!
