--- a/nivell1/scss/styles.scss
+++ b/nivell1/scss/styles.scss
@@ -5,8 +5,28 @@ $font-size-base: .7;
 $btn-font-size: .2;
 $nav-link-font-size: .7;
 
+.nav-tabs {
+    border: none;
+}
+
+.nav-tabs .nav-link {
+    color: #343a40;
+}
+
+.nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
+    border: none;
+}
+
 .nav-tabs .nav-link.active {
     border-bottom: 4px solid red;
+}
+
+.shadow {
+    box-shadow: 0px 3px 9px -2px rgba(59,123,255,0.48) !important;
+}
+
+.dotted-line {
+    border-bottom: 5px dotted #eee;
 }
 
 // import bootstrap
