--- a/nivell1/scss/styles.scss
+++ b/nivell1/scss/styles.scss
@@ -1,10 +1,13 @@
 // custom variables
 $primary: #5265E1;
 $secondary: #FA5959;
-$font-size-base: .7;
-$btn-font-size: .2;
-$nav-link-font-size: .7;
+/*$font-size-base: .8;
+ $btn-font-size: .2;
+$nav-link-font-size: .7; */
 
+.btn {
+    padding: 0.7rem 3rem !important;
+}
 .nav-tabs {
     border: none;
 }
@@ -25,8 +28,8 @@ $nav-link-font-size: .7;
     box-shadow: 0px 3px 9px -2px rgba(59,123,255,0.48) !important;
 }
 
-.dotted-line {
-    border-bottom: 5px dotted #eee;
+.accordion-item {
+    border-bottom: 1 px solid red !important;
 }
 
 // import bootstrap
