added banner form

--- a/nivell1/css/styles.css
+++ b/nivell1/css/styles.css
@@ -10,7 +10,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 28px !important;
+  font-size: 32px !important;
   font-weight: 600 !important;
 }
 
@@ -53,8 +53,12 @@ button {
   color: #FC595E;
 }
 
-.grey-border {
+.grey-border-b {
   border-bottom: 1px solid #E0E0EA;
+}
+
+.grey-border-t {
+  border-top: 1px solid #E0E0EA;
 }
 
 .btn-shadow {
@@ -72,7 +76,26 @@ button {
 }
 
 .accordion-item {
-  border-bottom: 1 px solid red;
+  border: none !important;
+}
+
+.accordion-button::after {
+  background-image: url(../img/icon-arrow.svg) !important;
+  background-repeat: no-repeat;
+  background-size: 1.25rem;
+}
+
+.accordion-button:not(.collapsed) {
+  color: #212529 !important;
+  background-color: #fff !important;
+}
+
+.accordion-button:hover {
+  color: #FC595E !important;
+}
+
+.lettering {
+  letter-spacing: 0.18em;
 }
 
 /*!
