--- a/nivell1/scss/styles.scss
+++ b/nivell1/scss/styles.scss
@@ -29,6 +29,10 @@ p {
     font-weight: 400 !important;
 }
 
+.lettering {
+    letter-spacing: 0.20em;
+}
+
 button {
     font-size: 14px !important;
     font-weight: 500 !important;
@@ -36,6 +40,30 @@ button {
 
 .btn-padding {
     padding: 12px 24px !important;
+}
+
+// images overlap 
+
+.img-move-wrapper {
+    border:1px solid red !important;
+    position:relative;
+    overflow:hidden;
+    margin:0 auto;
+    height: 500px;
+}
+
+.img-move {
+    position:absolute;
+}
+
+.img-move-1 {
+    right:0;
+    bottom: 0;
+    width:55%;
+}
+
+.img-move-2 {
+    left: 0; 
 }
 
 // tabs
@@ -102,10 +130,6 @@ button {
 
 .accordion-button:hover {
     color: #FC595E !important;
-}
-
-.lettering {
-    letter-spacing: 0.20em;
 }
 
 // import bootstrap
