--- a/nivell1/css/styles.css
+++ b/nivell1/css/styles.css
@@ -1,26 +1,30 @@
 @import url("http://fonts.googleapis.com/css?family=Inter:300,400,500,600,700");
+.flexCenter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nopadding {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
 body {
   font-family: 'Inter', sans-serif !important;
   color: #1D2441 !important;
 }
 
-h1, .h1 {
-  font-size: 48px !important;
-  font-weight: 600 !important;
-}
-
-h2, .h2 {
-  font-size: 32px !important;
-  font-weight: 600 !important;
-}
-
 h3, .h3 {
   font-size: 20px !important;
-}
-
-p {
-  font-size: 16px !important;
-  font-weight: 400 !important;
 }
 
 .lettering {
@@ -32,16 +36,11 @@ button {
   font-weight: 500 !important;
 }
 
-.btn-padding {
-  padding: 12px 24px !important;
-}
-
 .img-move-wrapper {
-  border: 1px solid red !important;
   position: relative;
   overflow: hidden;
   margin: 0 auto;
-  height: 500px;
+  height: 466px;
 }
 
 .img-move {
@@ -67,6 +66,8 @@ button {
 }
 
 .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+  color: #FC595E;
+  background-color: #fff;
   border-color: #FC595E !important;
   border-bottom: 5px solid;
   border-top: none;
@@ -75,7 +76,7 @@ button {
 }
 
 .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
-  border: none !important;
+  border: #fff !important;
   color: #FC595E;
 }
 
@@ -118,6 +119,15 @@ button {
 
 .accordion-button:hover {
   color: #FC595E !important;
+}
+
+@media screen and (max-width: 576px) {
+  .img-move-wrapper {
+    height: 300px;
+  }
+  .fullwidth {
+    width: 100% !important;
+  }
 }
 
 /*!
