--- a/nivell1/css/styles.css
+++ b/nivell1/css/styles.css
@@ -36,25 +36,40 @@ button {
   font-weight: 500 !important;
 }
 
-.img-move-wrapper {
+.img-overlap {
   position: relative;
   overflow: hidden;
   margin: 0 auto;
+}
+
+.img-hero {
   height: 466px;
+}
+
+.img-tab {
+  height: 380px;
 }
 
 .img-move {
   position: absolute;
 }
 
-.img-move-1 {
-  right: 0;
+.img-bottom {
   bottom: 0;
   width: 55%;
 }
 
-.img-move-2 {
+.img-right {
+  right: 0;
+}
+
+.img-left {
   left: 0;
+}
+
+.rotated {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .nav-tabs .nav-link {
@@ -122,8 +137,11 @@ button {
 }
 
 @media screen and (max-width: 576px) {
-  .img-move-wrapper {
-    height: 300px;
+  .img-hero {
+    height: 300px !important;
+  }
+  .img-tab {
+    height: 250px !important;
   }
   .fullwidth {
     width: 100% !important;
