--- a/nivell1/scss/styles.scss
+++ b/nivell1/scss/styles.scss
@@ -4,13 +4,6 @@ $secondary: #FA5959;
 
 @import url("http://fonts.googleapis.com/css?family=Inter:300,400,500,600,700");
 
-.flexCenter {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
 .nopadding {
     padding: 0 !important;
     margin: 0 !important;
@@ -21,15 +14,11 @@ body {
     color: #1D2441 !important;
 }
 
-h3 {
-    font-size: 20px !important;
-}
-
 .lettering {
     letter-spacing: 0.20em;
 }
 
-button {
+.button-size {
     font-size: 14px !important;
     font-weight: 500 !important;
 }
