--- a/nivell2/scss/styles.scss
+++ b/nivell2/scss/styles.scss
@@ -128,6 +128,12 @@ body {
     color: #FC595E !important;
 }
 
+// validation
+
+.invalid-tooltip {
+    background-color: red;
+}
+
 @media screen and (max-width: 576px) {
     .img-hero {
         height: 300px !important;
