added toggle for mobile

--- a/nivell3/scss/styles.scss
+++ b/nivell3/scss/styles.scss
@@ -125,6 +125,10 @@ a.colortext:hover {
     border-top: 1px solid #E0E0EA;
 }
 
+.navbar-collapse {
+    height: 100vh;
+}
+
 // shadows
 
 .btn-shadow {
@@ -198,6 +202,16 @@ a.colortext:hover {
         margin-top: 30px;
     }
 }
+
+  /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+  @media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+      font-size: 40px;
+      top: 15px;
+      right: 35px;
+    }
+  }
 
 // import bootstrap
 @import '../node_modules/bootstrap/scss/bootstrap';
