--- a/nivell3/css/styles.css
+++ b/nivell3/css/styles.css
@@ -115,6 +115,10 @@ a.colortext:hover {
   border-top: 1px solid #E0E0EA;
 }
 
+.navbar-collapse {
+  height: 100vh;
+}
+
 .btn-shadow {
   -webkit-box-shadow: 0px 3px 7px rgba(82, 102, 223, 0.3) !important;
           box-shadow: 0px 3px 7px rgba(82, 102, 223, 0.3) !important;
@@ -175,6 +179,18 @@ a.colortext:hover {
   }
   .cardIsa:nth-child(3) {
     margin-top: 30px;
+  }
+}
+
+/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+@media screen and (max-height: 450px) {
+  .overlay a {
+    font-size: 20px;
+  }
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
   }
 }
 
